--- a/index.html
+++ b/index.html
@@ -13,14 +13,6 @@ body { font-family: Inter, sans-serif; background:#f1f5f9; }
 .card { border-radius:18px; }
 .badge { font-size:12px; padding:4px 10px; border-radius:999px; }
 
-.line-2{
-  display:-webkit-box;
-  -webkit-line-clamp:2;
-  -webkit-box-orient:vertical;
-  overflow:hidden;
-}
-
-/* ===== MODAL IMAGE ===== */
 #imgModal {
   touch-action: none;
 }
@@ -33,27 +25,19 @@ body { font-family: Inter, sans-serif; background:#f1f5f9; }
 
 <body>
 
-<header class="bg-gradient-to-r from-indigo-700 to-blue-700 text-white sticky top-0 z-10 shadow">
-  <div class="max-w-3xl mx-auto px-4 py-4 space-y-3">
-    <h1 class="text-2xl font-extrabold text-center">DỮ LIỆU NHÀ THUÊ</h1>
-  </div>
-</header>
+<main class="max-w-3xl mx-auto p-3" id="list"></main>
 
-<main class="max-w-3xl mx-auto p-3 space-y-4">
-  <div id="list"></div>
-</main>
-
-<!-- ================= IMAGE MODAL ================= -->
+<!-- ================= POPUP ================= -->
 <div id="imgModal"
   class="fixed inset-0 bg-black/90 hidden z-50 flex items-center justify-center">
 
-  <div class="absolute top-4 left-4 text-white text-sm" id="imgCount"></div>
+  <div id="imgCount" class="absolute top-4 left-4 text-white text-sm"></div>
 
   <button onclick="closeModal()"
     class="absolute top-4 right-4 text-white text-3xl font-bold">✕</button>
 
   <img id="modalImg"
-    class="max-w-[95%] max-h-[90%] rounded-xl select-none">
+    class="max-w-[95%] max-h-[90%] rounded-xl select-none pointer-events-none">
 
 </div>
 
@@ -69,21 +53,19 @@ const URL = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?gid=${GI
 const $ = id => document.getElementById(id);
 let DATA = [];
 
-/* ================= CLEAN JSON ================= */
-function cleanJSON(text){
+/* ================= UTILS ================= */
+function cleanJSON(t){
   return JSON.parse(
-    text.replace('/*O_o*/','')
-        .replace('google.visualization.Query.setResponse(','')
-        .slice(0,-2)
+    t.replace('/*O_o*/','')
+     .replace('google.visualization.Query.setResponse(','')
+     .slice(0,-2)
   );
 }
 
-/* ================= DRIVE → IMAGE ================= */
 function driveToImage(url){
   if(!url) return '';
   let m = url.match(/\/d\/([a-zA-Z0-9_-]+)/) || url.match(/id=([a-zA-Z0-9_-]+)/);
-  if(!m) return '';
-  return `https://lh3.googleusercontent.com/d/${m[1]}=w1600`;
+  return m ? `https://lh3.googleusercontent.com/d/${m[1]}=w1600` : '';
 }
 
 /* ================= LOAD ================= */
@@ -109,17 +91,17 @@ fetch(URL)
 
 /* ================= RENDER ================= */
 function render(){
-  $('list').innerHTML = DATA.map(i=>`
-    <div class="card bg-white p-4 shadow space-y-3 mb-4">
-      ${i.images.length?`
+  $('list').innerHTML = DATA.map((i,cardIdx)=>`
+    <div class="card bg-white p-4 shadow mb-4 space-y-3">
       <div class="grid grid-cols-3 gap-2">
         ${i.images.map((img,idx)=>`
           <img src="${img}"
-            onclick='openModal(${JSON.stringify(i.images)},${idx})'
-            class="w-full h-32 object-cover rounded-xl cursor-pointer">
+            data-card="${cardIdx}"
+            data-idx="${idx}"
+            class="w-full h-32 object-cover rounded-xl cursor-pointer img-thumb"
+            draggable="false">
         `).join('')}
-      </div>`:''}
-
+      </div>
       <div class="font-bold">📍 ${i.address}</div>
       <div class="text-red-600 font-extrabold">💰 ${i.price}</div>
       <a href="tel:${i.phone}"
@@ -130,18 +112,26 @@ function render(){
   `).join('');
 }
 
-/* ================= MODAL LOGIC ================= */
+/* ================= MODAL ================= */
 let modalImages=[], idx=0;
-let scale=1, startX=0, startY=0, dx=0, dy=0;
-let startDist=0;
+let scale=1, dx=0, dy=0;
+let startX=0, startY=0, startDist=0;
 
-function openModal(images,i){
-  modalImages = images;
-  idx = i;
+document.addEventListener('click',e=>{
+  const img = e.target.closest('.img-thumb');
+  if(!img) return;
+
+  e.preventDefault();
+  e.stopPropagation();
+
+  const card = DATA[img.dataset.card];
+  modalImages = card.images;
+  idx = +img.dataset.idx;
+
   resetTransform();
   updateImg();
   $('imgModal').classList.remove('hidden');
-}
+});
 
 function closeModal(){
   $('imgModal').classList.add('hidden');
@@ -162,16 +152,13 @@ function applyTransform(){
     `translate(${dx}px,${dy}px) scale(${scale})`;
 }
 
-/* ===== TOUCH EVENTS ===== */
-let touches=[];
-
+/* ================= TOUCH ================= */
 $('imgModal').addEventListener('touchstart',e=>{
-  touches = [...e.touches];
-  if(touches.length===2){
-    startDist = getDist(touches);
+  if(e.touches.length===2){
+    startDist = getDist(e.touches);
   }else{
-    startX = touches[0].clientX;
-    startY = touches[0].clientY;
+    startX = e.touches[0].clientX;
+    startY = e.touches[0].clientY;
   }
 },{passive:false});
 
@@ -181,17 +168,16 @@ $('imgModal').addEventListener('touchmove',e=>{
     const dist = getDist(e.touches);
     scale = Math.min(Math.max(1, scale * dist/startDist),3);
     startDist = dist;
-  }else{
-    const x = e.touches[0].clientX;
-    const y = e.touches[0].clientY;
-    dx += x-startX;
-    dy += y-startY;
-    startX=x; startY=y;
+  }else if(scale>1){
+    dx += e.touches[0].clientX-startX;
+    dy += e.touches[0].clientY-startY;
+    startX=e.touches[0].clientX;
+    startY=e.touches[0].clientY;
   }
   applyTransform();
 },{passive:false});
 
-$('imgModal').addEventListener('touchend',e=>{
+$('imgModal').addEventListener('touchend',()=>{
   if(scale===1 && Math.abs(dx)>80){
     idx = dx<0 ? (idx+1)%modalImages.length :
                  (idx-1+modalImages.length)%modalImages.length;
@@ -200,19 +186,7 @@ $('imgModal').addEventListener('touchend',e=>{
   }
 });
 
-/* ===== DOUBLE TAP ZOOM ===== */
-let lastTap=0;
-$('imgModal').addEventListener('click',()=>{
-  const now = Date.now();
-  if(now-lastTap<300){
-    scale = scale>1 ? 1 : 2;
-    dx=dy=0;
-    applyTransform();
-  }
-  lastTap=now;
-});
-
-/* ===== UTILS ===== */
+/* ================= HELPERS ================= */
 function getDist(t){
   return Math.hypot(
     t[0].clientX - t[1].clientX,
