--- a/index.html
+++ b/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 <title>DỮ LIỆU NHÀ THUÊ</title>
 
 <script src="https://cdn.tailwindcss.com"></script>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
 body{
+  font-family:Inter,sans-serif;
   background:#f1f5f9;
-  overscroll-behavior: none;
+  overscroll-behavior:none;
 }
+.card{border-radius:18px}
+.badge{font-size:12px;padding:4px 10px;border-radius:999px}
 
 .thumb{
-  height:120px;
+  height:110px;
   border-radius:14px;
   background-size:cover;
   background-position:center;
 }
 
-#modal{
+#imgModal{
   touch-action:none;
 }
-
 #modalImg{
   max-width:95vw;
   max-height:90vh;
@@ -36,132 +39,260 @@ body{
 
 <body>
 
-<main id="list" class="max-w-3xl mx-auto p-3"></main>
+<!-- ================= HEADER ================= -->
+<header class="bg-gradient-to-r from-indigo-700 to-blue-700 text-white sticky top-0 z-20 shadow">
+  <div class="max-w-3xl mx-auto px-4 py-4 space-y-3">
+    <h1 class="text-2xl font-extrabold text-center">DỮ LIỆU NHÀ THUÊ</h1>
+    <div class="flex gap-2">
+      <input id="search" type="text"
+        placeholder="🔍 Địa chỉ | SĐT | Giá | Hoa hồng"
+        class="flex-1 p-3 rounded-xl text-gray-800" disabled>
+      <button id="btn"
+        class="bg-white/20 px-4 rounded-xl font-semibold text-sm" disabled>
+        Tìm
+      </button>
+    </div>
+  </div>
+</header>
 
-<!-- POPUP -->
-<div id="modal" class="fixed inset-0 bg-black/90 hidden z-50 flex items-center justify-center">
-  <div id="counter" class="absolute top-4 left-4 text-white text-sm"></div>
-  <button onclick="closeModal()" class="absolute top-4 right-4 text-white text-3xl">✕</button>
+<!-- ================= MAIN ================= -->
+<main class="max-w-3xl mx-auto p-3 space-y-4">
+
+  <div id="loading" class="bg-white p-6 rounded-xl shadow text-center">
+    <div class="w-8 h-8 border-4 border-gray-200 border-t-blue-600 rounded-full animate-spin mx-auto mb-3"></div>
+    <p class="text-sm">Đang tải dữ liệu...</p>
+  </div>
+
+  <div id="list" class="space-y-4 hidden"></div>
+
+  <div id="empty"
+    class="hidden bg-yellow-50 border-l-4 border-yellow-500 p-4 text-sm">
+    Không tìm thấy tài sản phù hợp
+  </div>
+
+</main>
+
+<!-- ================= POPUP ================= -->
+<div id="imgModal"
+  class="fixed inset-0 bg-black/90 hidden z-50 flex items-center justify-center">
+  <div id="imgCount" class="absolute top-4 left-4 text-white text-sm"></div>
+  <button onclick="closeModal()"
+    class="absolute top-4 right-4 text-white text-3xl">✕</button>
   <img id="modalImg">
 </div>
 
 <script>
-/* ================= DATA DEMO ================= */
-const DATA = [{
-  address:"68 CMT8",
-  price:"6 triệu",
-  images:[
-    "https://lh3.googleusercontent.com/d/1tXGJZxZExample=w1600",
-    "https://lh3.googleusercontent.com/d/1tXGJZxZExample2=w1600",
-    "https://lh3.googleusercontent.com/d/1tXGJZxZExample3=w1600"
-  ]
-}];
+/* ================= CONFIG ================= */
+const SHEET_ID = '14ntbPzHZdUEBAx7FxwEfpO0wBjyqaxNzXVYYphe_q2A';
+const GID = '61368668';
+const URL =
+  `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?gid=${GID}&tqx=out:json&tq=${
+    encodeURIComponent('select A,B,C,D,E,F,G,H,I,J')
+  }`;
+
+const $ = id => document.getElementById(id);
+let DATA = [];
+
+/* ================= CLEAN JSON ================= */
+const cleanJSON = t => JSON.parse(
+  t.replace('/*O_o*/','')
+   .replace('google.visualization.Query.setResponse(','')
+   .slice(0,-2)
+);
+
+/* ================= DRIVE → IMAGE ================= */
+function driveToImage(url){
+  if(!url) return '';
+  let m = url.match(/\/d\/([a-zA-Z0-9_-]+)/) ||
+          url.match(/id=([a-zA-Z0-9_-]+)/);
+  return m ? `https://lh3.googleusercontent.com/d/${m[1]}=w1200` : '';
+}
+
+/* ================= LOAD DATA ================= */
+async function loadData(){
+  const res = await fetch(URL);
+  const txt = await res.text();
+  const json = cleanJSON(txt);
+
+  DATA = json.table.rows.map(r=>{
+    const images = [
+      driveToImage(r.c?.[7]?.v),
+      driveToImage(r.c?.[8]?.v),
+      driveToImage(r.c?.[9]?.v)
+    ].filter(Boolean);
+
+    return {
+      owner:r.c?.[0]?.v||'',
+      phone:r.c?.[1]?.v||'',
+      address:r.c?.[2]?.v||'',
+      price:r.c?.[3]?.v||'',
+      deposit:r.c?.[4]?.v||'',
+      commission:r.c?.[5]?.v||'',
+      imageLink:r.c?.[6]?.v||'',
+      images
+    };
+  }).filter(i=>i.address);
+
+  $('loading').classList.add('hidden');
+  $('search').disabled=false;
+  $('btn').disabled=false;
+  render(DATA);
+}
+
+/* ================= SEARCH ================= */
+function search(){
+  const k = $('search').value.toLowerCase().trim();
+  if(!k) return render(DATA);
+  render(DATA.filter(i =>
+    [i.address,i.phone,i.price,i.deposit,i.commission]
+      .join(' ').toLowerCase().includes(k)
+  ));
+}
+
+/* ================= COPY PHONE ================= */
+function copyPhone(btn,phone){
+  navigator.clipboard.writeText(phone).then(()=>{
+    const old=btn.innerHTML;
+    btn.innerHTML='✓';
+    setTimeout(()=>btn.innerHTML=old,1000);
+  });
+}
 
 /* ================= RENDER ================= */
-const list = document.getElementById('list');
+function render(arr){
+  const box=$('list');
+  box.innerHTML='';
+  $('empty').classList.add('hidden');
 
-list.innerHTML = DATA.map((i,ci)=>`
-  <div class="bg-white p-4 rounded-xl shadow mb-4 space-y-3">
-    <div class="grid grid-cols-3 gap-2">
-      ${i.images.map((img,idx)=>`
-        <div class="thumb"
-          data-card="${ci}"
-          data-idx="${idx}"
-          style="background-image:url('${img}')">
-        </div>
-      `).join('')}
+  if(!arr.length){
+    box.classList.add('hidden');
+    $('empty').classList.remove('hidden');
+    return;
+  }
+
+  box.classList.remove('hidden');
+
+  box.innerHTML = arr.map((i,ci)=>`
+    <div class="card bg-white p-4 shadow space-y-3">
+
+      ${i.images.length ? `
+        <div class="grid grid-cols-3 gap-2">
+          ${i.images.map((img,idx)=>`
+            <div class="thumb"
+              data-card="${ci}"
+              data-idx="${idx}"
+              style="background-image:url('${img}')">
+            </div>
+          `).join('')}
+        </div>`:''}
+
+      <div class="bg-indigo-50 border border-indigo-200 rounded-xl p-3">
+        <div class="text-xs uppercase text-indigo-500">Địa chỉ</div>
+        <div class="font-bold text-indigo-800">📍 ${i.address}</div>
+      </div>
+
+      <div class="bg-red-50 border border-red-200
+        text-red-700 font-extrabold px-3 py-2 rounded-xl text-sm">
+        💰 Giá thuê: ${i.price}
+      </div>
+
+      <div class="flex gap-2">
+        <span class="badge bg-gray-100">Cọc ${i.deposit}</span>
+        <span class="badge bg-green-100 text-green-700 font-semibold">
+          HH ${i.commission}
+        </span>
+      </div>
+
+      <div class="flex gap-2">
+        <a href="tel:${i.phone}"
+          class="flex-1 bg-green-600 text-white py-2 rounded-xl text-center font-semibold">
+          📞 GỌI NGAY (${i.phone})
+        </a>
+        <button onclick="copyPhone(this,'${i.phone}')"
+          class="bg-gray-200 px-3 rounded-xl">
+          📋
+        </button>
+      </div>
+
+      <div class="text-sm text-gray-500">👤 ${i.owner}</div>
     </div>
-    <div class="font-bold">📍 ${i.address}</div>
-    <div class="text-red-600 font-extrabold">💰 ${i.price}</div>
-  </div>
-`).join('');
+  `).join('');
+}
 
-/* ================= POPUP LOGIC ================= */
-const modal = document.getElementById('modal');
-const modalImg = document.getElementById('modalImg');
-const counter = document.getElementById('counter');
+/* ================= POPUP ================= */
+let modalImgs=[], modalIdx=0;
+let scale=1, dx=0, dy=0, startX=0, startY=0, startDist=0;
 
-let imgs=[], idx=0;
-let scale=1, dx=0, dy=0;
-let startX=0, startY=0, startDist=0;
-
-/* OPEN */
-list.addEventListener('click',e=>{
-  const t = e.target.closest('.thumb');
+document.addEventListener('click',e=>{
+  const t=e.target.closest('.thumb');
   if(!t) return;
-
-  imgs = DATA[t.dataset.card].images;
-  idx = +t.dataset.idx;
-  reset();
-  show();
+  modalImgs = DATA[t.dataset.card].images;
+  modalIdx = +t.dataset.idx;
+  reset(); openModal();
 });
 
-/* SHOW */
-function show(){
-  modalImg.src = imgs[idx];
-  counter.innerText = `${idx+1}/${imgs.length}`;
-  modal.classList.remove('hidden');
+function openModal(){
+  modalImg.src = modalImgs[modalIdx];
+  imgCount.innerText = `${modalIdx+1}/${modalImgs.length}`;
+  imgModal.classList.remove('hidden');
 }
-
-/* CLOSE */
 function closeModal(){
-  modal.classList.add('hidden');
+  imgModal.classList.add('hidden');
 }
-
-/* RESET */
 function reset(){
-  scale=1; dx=0; dy=0;
-  apply();
+  scale=1;dx=0;dy=0;apply();
 }
-
 function apply(){
   modalImg.style.transform =
     `translate(${dx}px,${dy}px) scale(${scale})`;
 }
 
-/* ================= TOUCH ================= */
-modal.addEventListener('touchstart',e=>{
-  e.preventDefault();
+/* touch */
+imgModal.addEventListener('touchstart',e=>{
   if(e.touches.length===2){
-    startDist = dist(e.touches);
+    startDist=dist(e.touches);
   }else{
-    startX = e.touches[0].clientX;
-    startY = e.touches[0].clientY;
+    startX=e.touches[0].clientX;
+    startY=e.touches[0].clientY;
   }
 },{passive:false});
 
-modal.addEventListener('touchmove',e=>{
+imgModal.addEventListener('touchmove',e=>{
   e.preventDefault();
   if(e.touches.length===2){
-    let d = dist(e.touches);
-    scale = Math.min(Math.max(1, scale*d/startDist),3);
-    startDist = d;
+    let d=dist(e.touches);
+    scale=Math.min(Math.max(1,scale*d/startDist),3);
+    startDist=d;
   }else if(scale>1){
-    dx += e.touches[0].clientX-startX;
-    dy += e.touches[0].clientY-startY;
-    startX = e.touches[0].clientX;
-    startY = e.touches[0].clientY;
+    dx+=e.touches[0].clientX-startX;
+    dy+=e.touches[0].clientY-startY;
+    startX=e.touches[0].clientX;
+    startY=e.touches[0].clientY;
   }
   apply();
 },{passive:false});
 
-modal.addEventListener('touchend',()=>{
+imgModal.addEventListener('touchend',()=>{
   if(scale===1 && Math.abs(dx)>80){
-    idx = dx<0
-      ? (idx+1)%imgs.length
-      : (idx-1+imgs.length)%imgs.length;
-    reset();
-    show();
+    modalIdx = dx<0
+      ? (modalIdx+1)%modalImgs.length
+      : (modalIdx-1+modalImgs.length)%modalImgs.length;
+    reset(); openModal();
   }
 });
 
-/* ================= UTIL ================= */
 function dist(t){
   return Math.hypot(
     t[0].clientX-t[1].clientX,
     t[0].clientY-t[1].clientY
   );
 }
+
+/* EVENTS */
+$('btn').onclick=search;
+$('search').addEventListener('keydown',e=>e.key==='Enter'&&search());
+
+loadData();
 </script>
 
 </body>
