--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 <title>DỮ LIỆU NHÀ THUÊ</title>
 
 <script src="https://cdn.tailwindcss.com"></script>
@@ -20,7 +20,6 @@ body{font-family:Inter,sans-serif;background:#f1f5f9;overscroll-behavior:none}
 
 <body>
 
-<!-- HEADER -->
 <header class="bg-gradient-to-r from-indigo-700 to-blue-700 text-white sticky top-0 z-20 shadow">
   <div class="max-w-3xl mx-auto px-4 py-4 space-y-3">
     <h1 class="text-2xl font-extrabold text-center">DỮ LIỆU NHÀ THUÊ</h1>
@@ -31,7 +30,6 @@ body{font-family:Inter,sans-serif;background:#f1f5f9;overscroll-behavior:none}
   </div>
 </header>
 
-<!-- MAIN -->
 <main class="max-w-3xl mx-auto p-3 space-y-4">
   <div id="loading" class="bg-white p-6 rounded-xl shadow text-center">
     <div class="w-8 h-8 border-4 border-gray-200 border-t-blue-600 rounded-full animate-spin mx-auto mb-3"></div>
@@ -43,7 +41,6 @@ body{font-family:Inter,sans-serif;background:#f1f5f9;overscroll-behavior:none}
   </div>
 </main>
 
-<!-- POPUP -->
 <div id="imgModal" class="fixed inset-0 bg-black/90 hidden z-50 flex items-center justify-center">
   <div id="imgCount" class="absolute top-4 left-4 text-white text-sm"></div>
   <button onclick="closeModal()" class="absolute top-4 right-4 text-white text-3xl">✕</button>
@@ -51,17 +48,14 @@ body{font-family:Inter,sans-serif;background:#f1f5f9;overscroll-behavior:none}
 </div>
 
 <script>
-/* CONFIG */
 const SHEET_ID='14ntbPzHZdUEBAx7FxwEfpO0wBjyqaxNzXVYYphe_q2A';
 const GID='61368668';
 const URL=`https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?gid=${GID}&tqx=out:json&tq=${encodeURIComponent('select A,B,C,D,E,F,G,H,I,J')}`;
 const $=id=>document.getElementById(id);
-let DATA=[];
+let DATA=[], DISPLAY_DATA=[];
 
 /* CLEAN JSON */
 const cleanJSON=t=>JSON.parse(t.replace('/*O_o*/','').replace('google.visualization.Query.setResponse(','').slice(0,-2));
-
-/* DRIVE → IMAGE */
 function driveToImage(url){if(!url)return'';let m=url.match(/\/d\/([a-zA-Z0-9_-]+)/)||url.match(/id=([a-zA-Z0-9_-]+)/);return m?`https://lh3.googleusercontent.com/d/${m[1]}=w800`:''}
 
 /* LOAD DATA */
@@ -82,18 +76,19 @@ async function loadData(){
       images
     };
   }).filter(i=>i.address);
+  DISPLAY_DATA = [...DATA];
   $('loading').classList.add('hidden');
   $('search').disabled=false;
   $('btn').disabled=false;
-  render(DATA);
+  render(DISPLAY_DATA);
 }
 
 /* SEARCH */
 function search(){
   const k=$('search').value.toLowerCase().trim();
   $('search').blur(); // ẩn bàn phím
-  if(!k) return render(DATA);
-  render(DATA.filter(i=>[i.address,i.phone,i.price,i.deposit,i.commission].join(' ').toLowerCase().includes(k)));
+  DISPLAY_DATA = !k ? [...DATA] : DATA.filter(i=>[i.address,i.phone,i.price,i.deposit,i.commission].join(' ').toLowerCase().includes(k));
+  render(DISPLAY_DATA);
 }
 
 /* COPY PHONE */
@@ -108,7 +103,7 @@ function render(arr){
     <div class="card bg-white p-4 shadow space-y-3">
       ${i.images.length?`<div class="grid grid-cols-3 gap-2">
         ${i.images.map((img,idx)=>`
-          <div class="thumb" data-card="${ci}" data-idx="${idx}" style="background-image:url('${img}')" loading="lazy"></div>
+          <div class="thumb" data-idx="${idx}" data-card="${ci}" style="background-image:url('${img}')"></div>
         `).join('')}
       </div>`:''}
       <div class="bg-indigo-50 border border-indigo-200 rounded-xl p-3">
@@ -139,18 +134,21 @@ const imgModal=$('imgModal'), modalImg=$('modalImg'), imgCount=$('imgCount');
 
 document.addEventListener('click',e=>{
   const t=e.target.closest('.thumb'); if(!t)return;
-  modalImgs=DATA[t.dataset.card].images; modalIdx=+t.dataset.idx;
-  reset(); openModal();
+  const cardIdx = +t.dataset.card;
+  modalImgs = DISPLAY_DATA[cardIdx].images; // <-- dùng DISPLAY_DATA sau filter
+  modalIdx = +t.dataset.idx;
+  dx=0; dy=0; scale=1; apply();
+  openModal();
 });
 
-function openModal(){modalImg.src=modalImgs[modalIdx];imgCount.innerText=`${modalIdx+1}/${modalImgs.length}`;imgModal.classList.remove('hidden');}
+function openModal(){modalImg.src=modalImgs[modalIdx]; imgCount.innerText=`${modalIdx+1}/${modalImgs.length}`; imgModal.classList.remove('hidden');}
 function closeModal(){imgModal.classList.add('hidden');}
-function reset(){scale=1;dx=0;dy=0;apply();}
 function apply(){modalImg.style.transform=`translate(${dx}px,${dy}px) scale(${scale})`;}
 
+/* TOUCH */
 imgModal.addEventListener('touchstart',e=>{
-  if(e.touches.length===2){startDist=Math.hypot(e.touches[0].clientX-e.touches[1].clientX,e.touches[0].clientY-e.touches[1].clientY);}
-  else{startX=e.touches[0].clientX;startY=e.touches[0].clientY;}
+  if(e.touches.length===2) startDist=Math.hypot(e.touches[0].clientX-e.touches[1].clientX,e.touches[0].clientY-e.touches[1].clientY);
+  else {startX=e.touches[0].clientX; startY=e.touches[0].clientY;}
 },{passive:false});
 
 imgModal.addEventListener('touchmove',e=>{
@@ -158,25 +156,25 @@ imgModal.addEventListener('touchmove',e=>{
   if(e.touches.length===2){
     let d=Math.hypot(e.touches[0].clientX-e.touches[1].clientX,e.touches[0].clientY-e.touches[1].clientY);
     scale=Math.min(Math.max(1,scale*d/startDist),3); startDist=d;
-  }else if(scale>1){dx+=e.touches[0].clientX-startX;dy+=e.touches[0].clientY-startY;startX=e.touches[0].clientX;startY=e.touches[0].clientY;}
+  } else if(scale>1){dx+=e.touches[0].clientX-startX; dy+=e.touches[0].clientY-startY; startX=e.touches[0].clientX; startY=e.touches[0].clientY;}
   apply();
 },{passive:false});
 
 imgModal.addEventListener('touchend',()=>{
   if(scale===1 && Math.abs(dx)>50){
     modalIdx=dx<0?(modalIdx+1)%modalImgs.length:(modalIdx-1+modalImgs.length)%modalImgs.length;
-    reset(); openModal();
+    dx=0; dy=0; scale=1; apply();
+    openModal();
   }
-  dx=0;dy=0;
+  dx=0; dy=0;
 });
 
 /* EVENTS */
 $('btn').onclick=search;
-$('search').addEventListener('keydown',e=>{if(e.key==='Enter')search();});
+$('search').addEventListener('keydown',e=>{if(e.key==='Enter') search();});
 
-/* LOAD DATA */
+/* LOAD */
 loadData();
 </script>
-
 </body>
 </html>
