--- a/index.html
+++ b/index.html
@@ -97,8 +97,16 @@ function copyPhone(btn,phone){navigator.clipboard.writeText(phone).then(()=>{con
 
 /* RENDER */
 function render(arr){
-  const box=$('list'); box.innerHTML=''; $('empty').classList.add('hidden');
-  if(!arr.length){box.classList.add('hidden');$('empty').classList.remove('hidden');return;}
+  const box=$('list'); 
+  box.innerHTML=''; 
+  $('empty').classList.add('hidden');
+  
+  if(!arr.length){
+    box.classList.add('hidden');
+    $('empty').classList.remove('hidden');
+    return;
+  }
+
   box.classList.remove('hidden');
   box.innerHTML=arr.map((i,ci)=>`
     <div class="card bg-white p-4 shadow space-y-3">
@@ -107,23 +115,34 @@ function render(arr){
           <div class="thumb" data-idx="${idx}" data-card="${ci}" style="background-image:url('${img}')" loading="lazy"></div>
         `).join('')}
       </div>`:''}
+
       <div class="bg-indigo-50 border border-indigo-200 rounded-xl p-3">
         <div class="text-xs uppercase text-indigo-500">Địa chỉ</div>
-        <div class="font-bold text-indigo-800">📍 ${i.address}</div>
+        <div class="font-bold text-indigo-800">
+          📍 <a href="${i.imageLink||'#'}" target="_blank" class="hover:underline">${i.address}</a>
+        </div>
       </div>
+
       <div class="bg-red-50 border border-red-200 text-red-700 font-extrabold px-3 py-2 rounded-xl text-sm">
         💰 Giá thuê: ${i.price}
       </div>
+
       <div class="flex gap-2">
         <span class="badge bg-gray-100">Cọc ${i.deposit}</span>
         <span class="badge bg-green-100 text-green-700 font-semibold">HH ${i.commission}</span>
       </div>
+
       <div class="flex gap-2">
         <a href="tel:${i.phone}" class="flex-1 bg-green-600 text-white py-2 rounded-xl text-center font-semibold">
           📞 GỌI NGAY (${i.phone})
         </a>
         <button onclick="copyPhone(this,'${i.phone}')" class="bg-gray-200 px-3 rounded-xl">📋</button>
       </div>
+
+      ${i.images.length>1?`<div class="text-right">
+        <a href="${i.imageLink||'#'}" target="_blank" class="text-sm text-blue-600 hover:underline font-semibold">Xem thêm ảnh</a>
+      </div>`:''}
+
       <div class="text-sm text-gray-500">👤 ${i.owner}</div>
     </div>
   `).join('');
